--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 
-	<h1>Hello World!</h1>
+	<h1>WELCOME TO MY WEBSITE!</h1>
+
+	<p>And here is the paragraph section.</p>
 
 </body>
 </html>
